...
    <string name="menu_map_style_satellite_streets">Satellite streets</string>
    <string name="tambah_survey">Tambah Survey</string>
    <string name="nama_destinasi_edit">Nama Destinasi</string>
    <string name="alasan">Alasan</string>
    <string name="penilaian">Penilaian</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="edit_survey">Edit Survey</string>

    <string name="user_profile">User Profile</string>
    <string name="nama">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
...
